; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_crypto.c_prng_reset_nonce.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_crypto.c_prng_reset_nonce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nonce_md = common dso_local global i32 0, align 4
@nonce_secret_len = common dso_local global i32 0, align 4
@nonce_data = common dso_local global i64* null, align 8
@M_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [62 x i8] c"ERROR: Random number generator cannot obtain entropy for PRNG\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @prng_reset_nonce to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prng_reset_nonce() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @nonce_md, align 4
  %3 = call i32 @md_kt_size(i32 %2)
  %4 = load i32, i32* @nonce_secret_len, align 4
  %5 = add nsw i32 %3, %4
  store i32 %5, i32* %1, align 4
  %6 = load i64*, i64** @nonce_data, align 8
  %7 = load i32, i32* %1, align 4
  %8 = call i32 @rand_bytes(i64* %6, i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %0
  %11 = load i32, i32* @M_FATAL, align 4
  %12 = call i32 @msg(i32 %11, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %10, %0
  ret void
}

declare dso_local i32 @md_kt_size(i32) #1

declare dso_local i32 @rand_bytes(i64*, i32) #1

declare dso_local i32 @msg(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
